--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -66,3 +66,13 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+html,body,#root {
+  width: 100%;
+  height: 100vh;
+}
+
+.countries-list {
+  max-height: 75vh;
+  overflow-y: auto;
+}
